# resource-pack

./: .gitignore  LICENSE  antiMac.sh  credits.txt  pack.mcmeta
.github/workflows/: manual.yml
assets/minecraft/: sounds.json
assets/minecraft/blockstates/: bookshelf.json  cocoa.json  flower_pot.json  grass_block.json  lily_pad.json  peony.json  short_grass.json  spruce_leaves.json
assets/minecraft/equipment/: copper.json
assets/minecraft/items/: bush.json  carrot_on_a_stick.json  copper_ingot.json  crossbow.json  diamond.json  fern.json  gold_ingot.json  grass_block.json  iron_ingot.json  large_fern.json  leather.json  leather_boots copy.json  leather_boots.json  leather_chestplate.json  leather_helmet.json  leather_leggings.json  netherite_ingot.json  paper.json  shears.json  short_grass.json  stick.json  stone_axe.json  stone_hoe.json  stone_pickaxe.json  stone_shovel.json  stone_sword.json  string.json  tall_grass.json  trident.json
assets/minecraft/lang/: af_za.json  ar_sa.json  ast_es.json  az_az.json  ba_ru.json  bar.json  be_by.json  bg_bg.json  br_fr.json  brb.json  bs_ba.json  cs_cz.json  cy_gb.json  da_dk.json  de_at.json  de_ch.json  de_de.json  el_gr.json  en_au.json  en_pt.json  en_ud.json  eo_uy.json  es_ec.json  es_uy.json  esan.json  et_ee.json  eu_es.json  fa_ir.json  fi_fi.json  fil_ph.json  fo_fo.json  fr_ca.json  fra_de.json  (+79 more)
utils/sleepRemover/: pyproject.toml
utils/sleepRemover/src/sleepremover/: __init__.py  main.py
utils/sleepRemover/src/sleepremover/core/: languages.py
utils/sleepRemover/src/sleepremover/utils/: downloader.py
(+220 files in other folders)
