[project]
name = "sleepremover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Victor De Lomas", email = "victordlp8@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0"
]

[project.scripts]
sr = "sleepremover.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
